--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,16 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <item
+        android:id="@+id/action_bookings"
+        android:title="Bookings"
+        android:orderInCategory="100"
+        android:icon="@drawable/baseline_seat"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/baseline_settings"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="logout"
-        android:icon="@drawable/ic_logout"
+        android:icon="@drawable/baseline_logout_24"
         app:showAsAction="ifRoom" />
 </menu>
